# tdx-quote

./: Cargo.toml  README.md
src/: error.rs  lib.rs  mock.rs  take.rs  take_n.rs
tests/: parse.rs
