[package]
name = "tdx-quote"
version = "0.1.0"
edition = "2021"
authors   =['Entropy Cryptography <engineering@entropy.xyz>']
homepage  ='https://entropy.xyz/'
license   ='AGPL-3.0-or-later'
repository='https://github.com/entropyxyz/tdx-quote'

[dependencies]
nom = { version = "7.1.3", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "alloc"]}
sha2 = { version = "0.10.8", default-features = false }

[dev-dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }

[features]
mock = []
